<resources>
    <string name="app_name">Blood Drop</string>

    <!--Common-->
    <string name="save">Save</string>
    <!--Timeline-->
    <string name="fastrecord_bgl_hint">Blood glucose</string>
    <string name="fastrecord_insulin_dose_hint">Insulin dose</string>

    <!--New record-->
    <string name="new_record_title">Add new record</string>
    <string name="blood_glucose_value_hint">Enter glucose level</string>

</resources>
