<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_16" />

    <TextView
        android:id="@+id/new_record_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:text="@string/new_record_title"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/blood_glucose_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/blood_glucose_value_hint"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right"
        app:layout_constraintTop_toBottomOf="@+id/new_record_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blood_glucose_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintLeft_toLeftOf="@id/guide_left"
        app:layout_constraintRight_toRightOf="@id/guide_right"
        app:layout_constraintTop_toBottomOf="@+id/blood_glucose_container" />


</androidx.constraintlayout.widget.ConstraintLayout>